syntax = "proto3";

package web;

import "google/protobuf/duration.proto";

option go_package = "github.com/nandesh-dev/subtle/generated/proto/web";

service WebService {
  rpc GetSubtitleSegments(GetSubtitleSegmentsRequest) returns (GetSubtitleSegmentsResponse);
  rpc GetVideo(GetVideoRequest) returns (GetVideoResponse);
  rpc GetSubtitle(GetSubtitleRequest) returns (GetSubtitleResponse);
  rpc GetDirectory(GetDirectoryRequest) returns (GetDirectoryResponse);
  rpc GetMediaDirectories(GetMediaDirectoriesRequest) returns (GetMediaDirectoriesResponse);
  rpc GetGlobalStatistics(GetGlobalStatisticsRequest) returns (GetGlobalStatisticsResponse);
}

message GetSubtitleSegmentsRequest {
  int32 id = 1;
}

message GetSubtitleSegmentsResponse {
  repeated Segment segments = 1;
}

message Segment {
  int32 id = 4;
  google.protobuf.Duration start = 1;
  google.protobuf.Duration end = 2;

  string text = 3;
}

message GetSubtitleRequest {
  int32 id = 1;
}

message GetSubtitleResponse {
  string name = 1;
  int32 video_id = 2;
}

message GetVideoRequest {
  int32 id = 1;
}

message GetVideoResponse {
  string filepath = 1;
  repeated int32 subtitle_ids = 2;
}

message GetDirectoryRequest {
  string path = 1;
}

message GetDirectoryResponse {
  repeated string children_directory_names = 1;
  repeated int32 video_ids = 2;
}

message GetMediaDirectoriesRequest {}

message GetMediaDirectoriesResponse {
  repeated string paths = 1;
}

message GetGlobalStatisticsRequest {}

message GetGlobalStatisticsResponse {
  int32 Exported = 1;
  int32 Formated = 2;
  int32 Extracted = 3;
  int32 Total = 4;
}
